- Fixed problems with greyscale .bmp, .jpg and .pcx files.
- Made ilLoadFromJpegStruct and ilSaveFromJpegStruct exportable even if IL_NO_JPG defined.
- Fixed a bug loading .gif files with "local palettes".
- Fixed a problem loading .ico/.cur files with ColoursUsed set to 0 in their headers.
- Fixed a bug loading 4-bit .bmp images.




1.5.1
-----

- Fixed several problems with the internal file routines that caused many bugs.
- Fixed a simple problem loading .gif files.


1.5.0
-----

- Removed the printfs that somehow got left in il_sgi.c.
- Added ILUT_D3D_MIPLEVELS to ilutSetInteger().
- Updated the static library workspace.
- Updated ilAddAlpha, ilAddAlphaKey and ilRemoveAlpha in il_convert.c to deal
  with differing bits per channel.
- Changed the registered loading/saving function handler so that they can return errors.
- Changed ILU and ILUT to use DevIL's memory handler.
- Removed the last of the malloc/free calls.
- Changed the file/lump reading functions to set IL_FILE_READ_ERROR automatically
  when one occurs.
- Added IL_EOF for use with other languages.
- Fixed a small memory leak in the .psp loading code.
- Fixed a bug where images with types larger than short were not saving as .sgi correctly.
- Added checks for all file reads to see if they succeeded.
- Added recognition for the .pdd extension (.psd renamed).
- Fixed some leaks in the .dcx code.
- Added ilutFreePaddedData().
- Fixed some possible leaks in ilTexImage().
- Fixed a problem with loading some .dds volume textures (LinearSize field appears to be
  incorrect on some images).
- Fixed a problem loading some .tga files.
- Added more checks to determine if a .dds file has a volume texture in it.
- Added ilGetDXTCData().
- Fixed some RLE .sgi loading bugs.
- Added direct S3TC/DXTC to OpenGL code.
- Added ILUT_DIRECT3D8 for use with ilutRenderer.
- Added direct DXTC to Direct3D 8 code.
- Added IL_DXTC_DATA_FORMAT for use with ilGetInteger(v).
- Added support for more formats with IL_TYPE_UNKNOWN.